Moved index.html to feed from new session JSON

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@ p {text-align:center;}
     border: 1px solid green
 }
 </style>
-<script type="text/javascript" src="sessions.js"></script>
+<!-- <script type="text/javascript" src="sessions.js"></script> -->
+<script type="text/javascript" src="singleSession.js"></script>
 <script type="text/javascript">
 
 function getSessionIds(sessions) {
