Introduced chord diagram plotting

--- a/index.html
+++ b/index.html
@@ -439,6 +439,8 @@ timeline.addObserver(messagesView);
 
 <img src="sessionLifecycle.png" />
 
+<div w3-include-html="chordPlot.html"></div>
+
 
 <h4> Start Time </h4>
 <script>
